syntax = "proto3";

option go_package = "./proto";

service Portfolio {
  // GetHoldings fetches the detailed holdings information for a user or account.
  // This may include assets, quantities, and related metadata.
  rpc GetHoldings(HoldingsRequest) returns (HoldingsResponse);

  // GetSummaryTotals provides a summarized view of the totals for a user or account.
  // This typically includes aggregated financial data such as total value, profits, or losses.
  rpc GetSummaryTotals(SummaryTotalsRequest) returns (SummaryTotalsResponse);

  // GetPerformanceHistory provides the historical values and costs of the investments over a period of time.
  rpc GetPerformanceHistory(PerformanceHistoryRequest) returns (PerformanceHistoryResponse);
}

// Represents the request to retrieve holdings for a specific account.
message HoldingsRequest {
  // The unique identifier of the account for which the holdings are to be retrieved.
  string account_id = 1;
}

// Holds the response for the holdings-related request.
message HoldingsResponse {
  // A list of investments held in the account.
  repeated Investment investments= 3;
}

// Represents an individual investment within a portfolio or account.
message Investment {
   // The symbol of the asset (e.g., "AAPL" for Apple stock).
   string asset_symbol=1;

  // The full name of the asset (e.g., "Apple Inc.").
   string asset_name=2;

  // The market or exchange code where the asset is traded (e.g., "NASDAQ").
  string market_code=3;

  // The current price of the asset.
  Money current_price=4;

  // The average price of the asset.
  Money average_price=5;

  // The weight of the asset held in the portfolio.
  double  weight=6;

  // The quantity of the asset held in the portfolio.
  double  quantity=7;

  // The total value of the investment, calculated as price * quantity.
  Money total_value=8;

  // The total cost of all trades including commissions.
  Money total_cost=9;

  // The return on the investment due to price appreciation or depreciation.
  InvestmentReturn capital_return = 10;

  // The return on the investment from dividends paid by the asset.
  InvestmentReturn dividend_return = 11;

  // The return on the investment due to currency fluctuations (if applicable).
  InvestmentReturn currency_return = 12;

  // The total return on the investment, combining capital, dividend, and currency returns.
  InvestmentReturn total_return = 13;
}

// Represents an amount of money with its associated currency.
message Money {
  // The monetary amount (e.g., 100.0).
  double amount=1;

  // The ISO currency code (e.g., "USD" for United States Dollar).
  string currency_code=2;
}

// Represents the return on an investment in terms of monetary value
// and the percentage of the original investment value.
message InvestmentReturn {
  // The monetary return amount (e.g., 50.0 for $50).
  double amount=1;

  // The ISO currency code (e.g., "USD").
  string currency_code=2;

  // The return expressed as a percentage of the original investment value.
  double return_percentage=3;
}

// Represents the request to retrieve summary totals for a specific account.
message SummaryTotalsRequest {
  // The unique identifier of the account for which the summary totals are requested.
  string account_id = 1;
}

// Holds the response for summary totals, including the overall portfolio value
// and different types of returns.
message SummaryTotalsResponse{
  // The total value of the portfolio.
  Money portfolio_value = 1;

  // The total capital return across all investments in the portfolio.
  InvestmentReturn capital_return = 2;

  // The total dividend return across all investments in the portfolio.
  InvestmentReturn dividend_return = 3;

  // The total currency return due to exchange rate fluctuations.
  InvestmentReturn currency_return = 4;

  // The overall total return, combining capital, dividend, and currency returns.
  InvestmentReturn total_return = 5;
}

// Represents the request to retrieve historical values for a specific account.
message PerformanceHistoryRequest {
  // The unique identifier of the account for which the holdings are to be retrieved.
  string account_id = 1;

  // The start date for the historical data retrieval period, formatted as "YYYY-MM-DD".
  // This marks the beginning of the time range for which historical investment data is requested.
  string start_date = 2;

  // The end date for the historical data retrieval period, formatted as "YYYY-MM-DD".
  // This marks the conclusion of the time range for which historical investment data is requested.
  string end_date = 3;
}

// Represents the response containing historical investment data over a specified period.
message PerformanceHistoryResponse{
  // A list of historical records, where each record provides detailed information
  // about an investment's cost and value on specific dates.
  repeated HistoricalRecord records = 1;
}

// Represents the historical record of an investment's data for a specific date.
message HistoricalRecord{
  // The date of the trade or valuation, formatted as "YYYY-MM-DD".
  string trade_date = 1;

  // The total cost of the investment on the specified trade date.
  double cost =2;

  // The total value of the investment on the specified trade date.
  double value=3;

  // The ISO currency code (e.g., "USD") associated with the cost and value.
  string currency_code=4;
}